// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly for activity 1`] = `
<View
  accessible={true}
  focusable={true}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "flexDirection": "row",
      "flexWrap": "wrap",
      "opacity": 1,
    }
  }
>
  <Text>
    <Text
      style={
        Object {
          "fontWeight": "600",
        }
      }
    >
      someUser
    </Text>
     
    down voted
     
    <Text
      style={
        Object {
          "fontWeight": "600",
        }
      }
    >
      some title
    </Text>
  </Text>
</View>
`;

exports[`renders correctly for comment 1`] = `
<View
  accessible={true}
  focusable={true}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "flexDirection": "row",
      "flexWrap": "wrap",
      "opacity": 1,
    }
  }
>
  <Text>
    <Text
      style={
        Object {
          "fontWeight": "600",
        }
      }
    >
      someUser
    </Text>
     
    down voted
     
    <Text
      style={
        Object {
          "fontWeight": "600",
        }
      }
    >
       
      your comment
       
    </Text>
  </Text>
</View>
`;

exports[`renders correctly for object 1`] = `
<View
  accessible={true}
  focusable={true}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "flexDirection": "row",
      "flexWrap": "wrap",
      "opacity": 1,
    }
  }
>
  <Text>
    <Text
      style={
        Object {
          "fontWeight": "600",
        }
      }
    >
      someUser
    </Text>
     
    down voted
     
    <Text
      style={
        Object {
          "fontWeight": "600",
        }
      }
    >
      some title
    </Text>
  </Text>
</View>
`;
